Inject JSDoc options documentation into README

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A markdown-it plugin for wrapping a table with a tag or custom Vue component.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/*.js"
+    "doc": "jsdoc2md --template jsdoc2md/README.hbs index.js > README.md",
+    "test": "mocha test/*.js",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -17,8 +19,13 @@
   },
   "homepage": "https://github.com/dotherightthing/markdown-it-table-wrapper#readme",
   "devDependencies": {
+    "jsdoc-to-markdown": "^8.0.0",
     "markdown-it": "^13.0.2",
     "markdown-it-testgen": "^0.1.6",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "husky": "^8.0.0"
+  },
+  "dependencies": {
+    "husky": "^8.0.3"
   }
 }
